private photos in clans

--- a/assets/styles/message.scss
+++ b/assets/styles/message.scss
@@ -41,6 +41,12 @@
     right: -10px;
 }
 
+.delete-container-inside {
+    position: absolute;
+    top: 0;
+    right: 0;
+}
+
 .delete-icon {
     max-width: 30px;
 }
