Add 2 seconds on homepage carousel timer

--- a/templates/default/index.html.twig
+++ b/templates/default/index.html.twig
@@ -39,7 +39,7 @@
             </a>
         {% endfor %}
     </section>
-    <div id="carouselExampleControls" class="carousel slide bg-dark hide-before-scroll show-on-scroll min-height-200" data-ride="carousel">
+    <div id="carouselExampleControls" class="carousel slide bg-dark hide-before-scroll show-on-scroll min-height-200" data-ride="carousel" data-interval="7000">
         <ol class="carousel-indicators">
             <li data-target="#carouselExampleIndicators" data-slide-to="0" class="active"></li>
             <li data-target="#carouselExampleIndicators" data-slide-to="1"></li>
