bugFix in clan searchBar

--- a/templates/clan/index.html.twig
+++ b/templates/clan/index.html.twig
@@ -96,7 +96,7 @@
                         data.forEach(function(clan){
                             let BGStyle = `background: url('{{ asset('uploads/challenge/challenge-default.jpeg') }}') no-repeat center; background-size: cover;`;
                             if (clan.banner !== null) {
-                                BGStyle = `background: url('https://kyosc.com/uploads/clan/${
+                                BGStyle = `background: url('https://kyosc.com/uploads/clan/banner/${
                                     clan.banner
                                 }') no-repeat center; background-size: cover;`;
                             }
