aboutKyosc text modified

--- a/templates/about/aboutKyosc.html.twig
+++ b/templates/about/aboutKyosc.html.twig
@@ -20,12 +20,13 @@
     <div class="my-5 p-4 w-75 transparent-background-dark d-flex flex-column justify-content-center align-items-center hide-before-scroll show-on-scroll">
         <p class="pre-line">
             KYOSC est une plateforme de partage et de publication d’aventures créés par des sportifs amateurs pour interagir avec leurs « clans » et les rapprocher des marques, des destinations et des prestataires de services partenaires de KYOSC.
-            Centraliser l’intégralité des étapes du parcours de chaque groupe et d’éditer un support unique de communication permettant à chacun de partager, d’échanger et d’interagir au sein de ses clans sur ses activités et ses aventures sportives.
-            Permettre à chaque groupe et à chaque membre de retrouver très facilement toutes les informations et partages concernant ses participations régulières et à venir, en se connectant à son profil.
-            Connaitre, suivre et rejoindre les aventures de ses différents clans en fonction de ses centres d’intérêts et de ses disponibilités.
-            Apporter une assistance à la création et à l’organisation des aventures sportives.
-            Animer ses clans et leurs activités à travers les interactions et la gamification.
-            Accéder pour les marques et les destinations à une relation directe et privilégiée avec les groupes. Impliquées dans les aventures sportives des clans, les marques et les destinations profitent de leur visibilité en situation de pratique sur les réseaux sociaux.
+            <ul>
+                <li>Permettre aux clans et aux membres de créer leurs aventures sportives et de retrouver très facilement toutes les informations essentielles partagées.</li>
+                <li>Connaitre, suivre et rejoindre les aventures de ses différents clans en fonction de ses centres d’intérêts et de ses disponibilités.</li>
+                <li>Apporter une assistance à la création et à l’organisation des aventures sportives.</li>
+                <li>Animer ses clans et leurs activités à travers les interactions et la gamification.</li>
+                <li>Accéder pour les marques et les destinations à une relation directe et privilégiée avec les clans et leurs membres en s’impliquant dans leurs aventures sportives.</li>
+            </ul>
         </p>
     </div>
     <img src="{{ asset('build/images/aboutUs/victory.png')|imagine_filter('compress') }}" class="about-image">
