--- a/templates/challenge/show.html.twig
+++ b/templates/challenge/show.html.twig
@@ -330,15 +330,35 @@
         {% endif %}
         <div class="row mt-3">
             {% for picture in challenge.pictures|reverse %}
-            <a class="col-6 col-md-3 text-decoration-none home-square-box d-flex flex-column p-1 hide-before-scroll show-on-scroll position-relative"
-               href="{{ vich_uploader_asset(picture, 'pathFile')}}"
-               download="{{ picture.path }}"
+            <a class="col-6 col-md-3 text-decoration-none home-square-box d-flex flex-column p-1 hide-before-scroll show-on-scroll position-relative cursor-pointer"
+               data-toggle="modal" data-target="#picture{{ picture.id }}"
                style="background: url('{{ vich_uploader_asset(picture, 'pathFile')}}') no-repeat center; background-size: cover;"
             >
                 {% if app.user and is_granted("ROLE_ADMIN") or app.user == picture.author or app.user == challenge.creator %}
                     {{ include('picture/_delete_form.html.twig') }}
                 {% endif %}
             </a>
+            {#        modal for pictures upload pop-up#}
+            <div class="modal fade" id="picture{{ picture.id }}" tabindex="-1" role="dialog" aria-labelledby="exampleModalCenterTitle" aria-hidden="true">
+                <div class="modal-dialog modal-xl" role="document">
+                    <div class="modal-content">
+                        <div class="modal-header">
+                            <a class="journey-link-dark mb-3" href="{{ vich_uploader_asset(picture, 'pathFile')}}" download="{{ picture.path }}">
+                                <h2 class="m-auto arrow-header">Télécharger<br>
+                                    <img src="{{ asset('build/images/fleche/fbnoir.png') }}" class="w-25">
+                                </h2>
+                            </a>
+                            <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+                                <span aria-hidden="true">&times;</span>
+                            </button>
+                        </div>
+                        <div class="modal-body d-flex justify-content-center">
+                            <img src="{{ vich_uploader_asset(picture, 'pathFile')}}" class="mw-100 mh-100">
+                        </div>
+                    </div>
+                </div>
+            </div>
+            {#       end of modal for pictures upload pop-up#}
             {% else %}
                 <p class="mx-auto my-3">Cette aventure n'a pas encore de photo</p>
             {% endfor %}
