ownership transfer of clans OK with searchbar (new user)

--- a/templates/clan/show.html.twig
+++ b/templates/clan/show.html.twig
@@ -50,6 +50,9 @@
             <div class="form-kyosc mb-3 mb-md-0">
                 <a class="btn btn-register m-1" href="{{ path('clan_edit', {id: clan.id})}}">Modifier</a>
             </div>
+            <div class="form-kyosc mb-3 mb-md-0">
+                <a class="btn btn-delete m-1" href="{{ path('clan_transfer-ownership', {id: clan.id})}}">Transférer propriété de ce clan</a>
+            </div>
         {% endif %}
     </section>
 
@@ -125,7 +128,7 @@
             <div class="col-lg-6 col-12 d-flex justify-content-center flex-column">
                 <a href="{{ path("profil_show", {id: clan.creator.id}) }}" class="text-center">
                     {% if clan.creator.profilPhoto is not null %}
-                        <img class="profil-photo-challenge mb-2" src="{{ vich_uploader_asset(clan.creator, 'profilPhotoFile')| imagine_filter('avatar_thumb') }}" alt="profilPhoto of challenge creator">
+                        <img class="profil-photo-challenge mb-2" src="{{ vich_uploader_asset(clan.creator, 'profilPhotoFile')| imagine_filter('avatar_thumb') }}" alt="profilPhoto of clan creator">
                     {% else %}
                         <img class="profil-photo-challenge mb-2" src="{{ asset('uploads/profils/default-profil-picture.png') }}" alt="default profil picture">
                     {% endif %}
@@ -213,7 +216,7 @@
                        data-toggle="modal" data-target="#picture{{ picture.id }}"
                        style="background: url('{{ vich_uploader_asset(picture, 'pathFile')}}') no-repeat center; background-size: cover;"
                     >
-                        {% if app.user and is_granted("ROLE_ADMIN") or app.user == picture.author or app.user == challenge.creator %}
+                        {% if app.user and is_granted("ROLE_ADMIN") or app.user == picture.author or app.user == clan.creator %}
                             {{ include('picture/_delete_form.html.twig') }}
                         {% endif %}
                     </a>
