--- a/templates/profil/show.html.twig
+++ b/templates/profil/show.html.twig
@@ -529,6 +529,9 @@
                                 <a class="btn btn-register m-1" href="{{ path('clan_edit', {id: clan.id})}}">Modifier</a>
                                 {{ include('clan/_delete_form.html.twig') }}
                             </div>
+                            <div class="form-kyosc mb-3 mb-md-0 mx-auto">
+                                <a class="btn btn-delete m-1" href="{{ path('clan_transfer-ownership', {id: clan.id})}}">Transférer propriété de ce clan</a>
+                            </div>
                         </div>
                     {% else %}
                         <div class="d-flex flex-column justify-content-center align-items-center">
