Typo in transfer ownership button

--- a/templates/clan/show.html.twig
+++ b/templates/clan/show.html.twig
@@ -51,7 +51,7 @@
                 <a class="btn btn-register m-1" href="{{ path('clan_edit', {id: clan.id})}}">Modifier</a>
             </div>
             <div class="form-kyosc mb-3 mb-md-0">
-                <a class="btn btn-delete m-1" href="{{ path('clan_transfer-ownership', {id: clan.id})}}">Transférer propriété de ce clan</a>
+                <a class="btn btn-delete m-1" href="{{ path('clan_transfer-ownership', {id: clan.id})}}">Transférer la propriété de ce clan</a>
             </div>
         {% endif %}
     </section>
