--- a/templates/profil/show.html.twig
+++ b/templates/profil/show.html.twig
@@ -530,7 +530,7 @@
                                 {{ include('clan/_delete_form.html.twig') }}
                             </div>
                             <div class="form-kyosc mb-3 mb-md-0 mx-auto">
-                                <a class="btn btn-delete m-1" href="{{ path('clan_transfer-ownership', {id: clan.id})}}">Transférer propriété de ce clan</a>
+                                <a class="btn btn-delete m-1" href="{{ path('clan_transfer-ownership', {id: clan.id})}}">Transférer la propriété de ce clan</a>
                             </div>
                         </div>
                     {% else %}
