--- a/templates/challenge/show.html.twig
+++ b/templates/challenge/show.html.twig
@@ -30,8 +30,10 @@
     {% set color = challenge.sports[0].color %}
 
     <header class="arrow-header my-3 text-uppercase" style="background-color: {{color}};">
-        <h1>{{ challenge.title }} #{{ challenge.id }}</h1>
-        <p class="m-0 text-white">{{ challenge.dateStart |format_datetime(pattern="dd MMMM Y",locale='fr') }}</p>
+        <h1>{{ challenge.title }}</h1>
+        <p class="m-0 text-white pre-line">{{ challenge.dateStart |format_datetime(pattern="dd MMMM Y",locale='fr') }}
+            aventure n°{{ challenge.id }}
+        </p>
         <div class="d-flex align-items-center mt-2">
             <div class="fb-share-button mr-2" data-href="{{ app.request.uri }}" data-layout="button" data-size="large"><a target="_blank" href="https://www.facebook.com/sharer/sharer.php?u=http%3A%2F%2F127.0.0.1%3A8000%2Faventure%2F411&amp;src=sdkpreparse" class="fb-xfbml-parse-ignore">Partager</a></div>
             <a class="twitter-share-button"
@@ -58,19 +60,27 @@
                 <div class="row">
                     <div class="col-lg-12 ">
                         <div class="key-info-row">
-                            <span class="key-info">DATE:</span>
+                            <span class="key-info text-uppercase">Date:</span>
                             <p>{{ challenge.dateStart |format_datetime(pattern="dd MMMM Y",locale='fr') }}</p>
                         </div>
                         <div class="key-info-row">
-                            <span class="key-info">LIEU:</span>
+                            <span class="key-info text-uppercase">Lieu:</span>
                             <p>{{ challenge.location | capitalize }}</p>
                         </div>
                         <div class="key-info-row">
-                            <span class="key-info">DISTANCE:</span>
+                            <span class="key-info text-uppercase">Distance:</span>
                             {% if challenge.distance %}
-                            <p>{{challenge.distance}} km</p>
+                            <p>{{ challenge.distance }} km</p>
                             {% else %}
                             <p>Non spécifiée</p>
+                            {% endif %}
+                        </div>
+                        <div class="key-info-row">
+                            <span class="key-info text-uppercase">Niveau de difficulté:</span>
+                            {% if challenge.level %}
+                                <p>{{ challenge.level.name }}</p>
+                            {% else %}
+                                <p>Non spécifié</p>
                             {% endif %}
                         </div>
                         {% if challenge.gpxTrack %}
@@ -82,7 +92,7 @@
                 </div>
             </div>
         </div>
-        <div class="d-flex flex-column justify-content-center">
+        <div class="d-flex flex-column justify-content-center mt-3">
             {% if app.user in challenge.participants and app.user != challenge.creator %}
                 <form class="align-middle align-self-center mb-4 form-kyosc" method="post" action="{{ path('challenge_leave', {id: challenge.id}) }}">
                     <input type="hidden" name="challengeId" value="{{ challenge.id }}">
