typo in catch-phrases

--- a/templates/default/index.html.twig
+++ b/templates/default/index.html.twig
@@ -62,7 +62,7 @@
             </div>
             <div class="carousel-item p-4">
                 <h2 class="h1 text-kred p-4 w-75 mx-auto">
-                    Chez KYOSC pas de green baching, on te fait confiance pour imaginer les plus belles activités sportives respectueuses de l’environnement.
+                    Chez KYOSC pas de greenwashing, on te fait confiance pour imaginer les plus belles activités sportives respectueuses de l’environnement.
                 </h2>
             </div>
             <div class="carousel-item p-4">
@@ -72,7 +72,7 @@
             </div>
             <div class="carousel-item p-4">
                 <h2 class="h1 text-kred p-4 w-75 mx-auto">
-                    Si tu ne veux pas pratiquer la randonnée ou la voile seul, KYOSC est la bonne voie pour t’intégrer à des clans qui te ressemble, disposés à t’accueillir.
+                    Si tu ne veux pas pratiquer la randonnée ou la voile seul, KYOSC est la bonne voie pour t’intégrer à des clans qui te ressemblent, disposés à t’accueillir.
                 </h2>
             </div>
             <div class="carousel-item p-4">
