--- a/templates/challenge/_delete_form.html.twig
+++ b/templates/challenge/_delete_form.html.twig
@@ -1,4 +1,4 @@
-<form method="post" action="{{ path('challenge_delete', {'id': challenge.id}) }}" onsubmit="return confirm('Êtes-vous sûr de vouloir supprimer ce challenge?');">
+<form method="post" action="{{ path('challenge_delete', {'id': challenge.id}) }}" onsubmit="return confirm('Êtes-vous sûr de vouloir supprimer cette aventure?');">
     <input type="hidden" name="_method" value="DELETE">
     <input type="hidden" name="_token" value="{{ csrf_token('delete' ~ challenge.id) }}">
     <button class="btn btn-delete">Supprimer</button>
